feature: defining project structure

--- a/backend/scrobble_vault/.env.example
+++ b/backend/scrobble_vault/.env.example
@@ -1,2 +1,11 @@
-API_KEY='your_api_key_here'
-DB_FILE_PATH='scrobble_vault.db'
+# ENV for Last.fm
+LAST_FM_USERNAME='your_last_fm_username' # your last.fm username
+LAST_FM_PASSWORD='your_last_fm_password' # your last.fm password
+LAST_FM_API_KEY="your_last_fm_api_key" # your last.fm API key
+LAST_FM_API_SECRET="your_last_fm_api_secret" # your last.fm API secret
+
+# SQLite DB configuration
+DB_FILE_PATH='scrobble_vault.db' # path to your SQLite DB file
+
+# FAST API configuration
+SYNC_INTERVAL_MINUTES=15 # interval in minutes for syncing scrobbles
