--- a/backend/scrobble_vault/.env.example
+++ b/backend/scrobble_vault/.env.example
@@ -4,8 +4,8 @@ LAST_FM_PASSWORD='your_last_fm_password' # your last.fm password
 LAST_FM_API_KEY="your_last_fm_api_key" # your last.fm API key
 LAST_FM_API_SECRET="your_last_fm_api_secret" # your last.fm API secret
 
-# SQLite DB configuration
-DB_FILE_PATH='scrobble_vault.db' # path to your SQLite DB file
-
-# FAST API configuration
+# Scrobble vault configuration
 SYNC_INTERVAL_MINUTES=15 # interval in minutes for syncing scrobbles
+RATE_LIMIT_MS=200 # rate limit in milliseconds between API requests
+POSTGRE_USER='admin' # username for the scrobble vault database
+POSTGRE_PASSWORD='mypassword' # password for the scrobble vault database
