patch(scrobble_vault):
Fix postgresql data path and use default docker compose name

--- a/backend/scrobble_vault/docker-compose.yaml
+++ b/backend/scrobble_vault/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - scrobble_vault_DB_data:/var/lib/postgresql/data
+      - scrobble_vault_DB_data:/var/lib/postgresql/
 
 volumes:
   scrobble_vault_DB_data:
