feature(scrobble_vault):
Improve env implementable
Preperations for sync table

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# ENV for Last.fm
+# Last.fm configuration
 LAST_FM_USERNAME='your_last_fm_username' # your last.fm username
 LAST_FM_PASSWORD='your_last_fm_password' # your last.fm password
 LAST_FM_API_KEY="your_last_fm_api_key" # your last.fm API key
@@ -7,5 +7,10 @@ LAST_FM_API_SECRET="your_last_fm_api_secret" # your last.fm API secret
 # Scrobble vault configuration
 SYNC_INTERVAL_MINUTES=15 # interval in minutes for syncing scrobbles
 RATE_LIMIT_MS=200 # rate limit in milliseconds between API requests
-POSTGRE_USER='admin' # username for the scrobble vault database
-POSTGRE_PASSWORD='mypassword' # password for the scrobble vault database
+
+# PostgreSQL configuration
+POSTGRES_USER='admin' # username for the scrobble vault database
+POSTGRES_PASSWORD='mypassword' # password for the scrobble vault database
+POSTGRES_HOST='localhost' # PostgreSQL host, need to change to db eventually for docker
+POSTGRES_PORT='5432' # PostgreSQL port
+POSTGRES_DB='scrobble_vault' # PostgreSQL database name
