--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,5 @@ POSTGRES_PASSWORD='mypassword' # password for the scrobble vault database
 POSTGRES_HOST='localhost' # PostgreSQL host, need to change to db eventually for docker
 POSTGRES_PORT='5432' # PostgreSQL port
 POSTGRES_DB='scrobble_vault' # PostgreSQL database name
+POSTGRES_MIN_POOL_SIZE=1 # PostgreSQL min simutanious connections
+POSTGRES_MAX_POOL_SIZE=5 # PostgreSQL max simutanious connections
