feature(scrobble_vault): automatic read only user creation On first container run when they do docker compose up, it should create the read only user for the db The read only user will run the SQL generated by the LLM in future.

--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,11 @@ LAST_FM_API_SECRET="your_last_fm_api_secret" # your last.fm API secret
 SYNC_INTERVAL_MINUTES=15 # interval in minutes for syncing scrobbles
 RATE_LIMIT_MS=200 # rate limit in milliseconds between API requests
 
-# PostgreSQL configuration
-POSTGRES_USER='admin' # username for the scrobble vault database
-POSTGRES_PASSWORD='mypassword' # password for the scrobble vault database
+# Scrobble vault PostgreSQL configuration
+POSTGRES_SUPER_USER='admin' # default superuser username for the DB
+POSTGRES_SUPER_USER_PASSWORD='mypassword' # default superuser password for the DB
+POSTGRES_READ_ONLY_USER='readonly' # read only username for the DB
+POSTGRES_READ_ONLY_USER_PASSWORD='mypassword' # read only user password for the DB
 POSTGRES_HOST='localhost' # PostgreSQL host, need to change to db eventually for docker
 POSTGRES_PORT='5432' # PostgreSQL port
 POSTGRES_DB='scrobble_vault' # PostgreSQL database name
